Fix "no scrollbars in playback queue" bug.
Former-commit-id: d63c9348e21ee713bc1425581f56fe16510be11b

--- a/app/assets/stylesheets/song_list.scss
+++ b/app/assets/stylesheets/song_list.scss
@@ -5,6 +5,13 @@ div#song_list {
   margin: 0;
 }
 
+// Used by playlist view, playback queue
+div#song_list_fullscreen {
+  height: 100%;
+  overflow: scroll;
+  margin: 0;
+}
+
 table#song_list_table {
   min-width: 100%;
 
